--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,18 @@
     <title>Q4</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <nav class="fixed-top navbar navbar-expand" id="nav-bar">
+        <a href="<%= product_items_path %>" class="nav-link text-white">
+          Product-Items
+        </a>
+      </nav>
+      <%= yield %>
+    </div>
   </body>
 </html>
