--- a/app/views/field_items/_select_field.html.erb
+++ b/app/views/field_items/_select_field.html.erb
@@ -3,4 +3,7 @@
     <span class="input-group-text"><%= "#{assoc.singularize}-type" %></span>
   </div>
   <%= f.collection_select fk_id(assoc), type_options(product_item, assoc), :id, :item_name, {prompt: "- select from existing #{assoc} -"}, {class: "form-control"} %>
+  <div class="input-group-append">
+    <button class="btn btn-sm btn-outline-danger collapse-field-btn" type="button" id="collapse-field-btn"><%= (fa_icon "times") %></button>
+  </div>
 </div>
