--- a/app/views/product_items/_show.html.erb
+++ b/app/views/product_items/_show.html.erb
@@ -1,12 +1,13 @@
 <div class="card border m-1 border-dark" id="<%= dom_ref(product_item, :show) %>">
   <div class="card-header" id="<%= dom_ref(product_item, :header) %>">
-    <%#= product_item.item_name %>
     <%= render 'product_items/edit', product_item: @product_item %>
   </div>
 
   <div class="card-body p-1" id="<%= dom_ref(product_item, :body) %>">
     <div id='<%= dom_ref(product_item, :index) %>'>
-      <%#= render "elements/index", element: element %>
+      <% product_item.all_targets.each do |item_group| %>
+        <%= render "#{folder_name(item_group)}/target", target: item_group.target %>
+      <% end %>
     </div>
   </div>
 </div>
