--- a/app/views/field_items/_text_field.html.erb
+++ b/app/views/field_items/_text_field.html.erb
@@ -1,8 +1,8 @@
 <div class="input-group input-group-sm mb-3">
   <div class="input-group-prepend">
-    <span class="input-group-text"><%= "#{assoc.singularize}-type" %></span>
+    <span class="input-group-text"><%= "#{item_hsh(assoc)[:label]}" %></span>
   </div>
-  <%= f.text_field :item_name, placeholder: "create new #{assoc.singularize}-types using comma separated list", class: "form-control" %>
+  <%= f.text_field item_hsh(assoc)[:name_method], placeholder: "create new #{item_hsh(assoc)[:label]} using comma separated list", class: "form-control" %>
   <div class="input-group-append">
     <button class="btn btn-sm btn-outline-danger collapse-field-btn" type="button" id=""><%= (fa_icon "times") %></button>
   </div>
