--- a/app/views/product_items/_show.html.erb
+++ b/app/views/product_items/_show.html.erb
@@ -1,11 +1,11 @@
 <div class="card border m-1 border-dark" id="<%= dom_ref(product_item, :show) %>">
   <div class="card-header" id="<%= dom_ref(product_item, :header) %>">
-    <%= render 'product_items/edit', product_item: @product_item %>
+    <%= render 'product_items/edit', product_item: @product_item, url: product_item_path(@product_item) %>
   </div>
 
   <div class="card-body p-1" id="<%= dom_ref(product_item, :body) %>">
     <div id='<%= dom_ref(product_item, :index) %>'>
-      <% product_item.all_targets.each do |item_group| %>
+      <% product_item.targets.each do |item_group| %>
         <%= render "#{folder_name(item_group)}/target", target: item_group.target %>
       <% end %>
     </div>
