--- a/app/views/product_items/_target.html.erb
+++ b/app/views/product_items/_target.html.erb
@@ -1,11 +1,11 @@
 <div class="card border m-1 border-dark" id="<%= dom_ref(target, :show) %>">
   <div class="card-header" id="<%= dom_ref(target, :header) %>">
-    <%= target.item_name %>
+    <%= name_method(target) %>
   </div>
 
   <div class="card-body p-1" id="<%= dom_ref(target, :body) %>">
     <div id='<%= dom_ref(target, :index) %>'>
-      <%# product_item.all_targets.each do |item_group| %>
+      <%# product_item.targets.each do |item_group| %>
         <%#= render "#{folder_name(item_group)}/target", target: item_group.target %>
       <%# end %>
     </div>
