added item_groups controller for removing product_item associations; need to refactor accomodate for field_items; specifically, changing instance variable from product_item to origin; also added call back that acts as workaround for dependent: :destroy

--- a/app/views/product_items/_show.html.erb
+++ b/app/views/product_items/_show.html.erb
@@ -5,9 +5,10 @@
 
   <div class="card-body p-1" id="<%= dom_ref(product_item, :body) %>">
     <div id='<%= dom_ref(product_item, :index) %>'>
-      <% product_item.targets.each do |item_group| %>
-        <%= render "#{folder_name(item_group)}/target", target: item_group.target %>
-      <% end %>
+      <%= render "product_items/index", origin: product_item %>
+      <%# product_item.targets.each do |item_group| %>
+        <%#= render "#{folder_name(item_group)}/target", origin: product_item, target: item_group.target, item_group: item_group %>
+      <%# end %>
     </div>
   </div>
 </div>
