--- a/app/views/product_items/_index.html.erb
+++ b/app/views/product_items/_index.html.erb
@@ -1,3 +1,3 @@
-<% product_item.targets.each do |item_group| %>
-  <%= render "#{folder_name(item_group)}/target", target: item_group.target %>
+<% origin.targets.each do |item_group| %>
+  <%= render "product_items/target", origin: origin, target: item_group.target, item_group: item_group %>
 <% end %>
