added item_group update_sort and fixed type_options to exclude already selected items

--- a/app/views/product_items/_index.html.erb
+++ b/app/views/product_items/_index.html.erb
@@ -1,3 +1,3 @@
-<% origin.targets.each do |item_group| %>
+<% origin.item_groups.order(:sort).each do |item_group| %>
   <%= render "product_items/target", origin: origin, target: item_group.target, item_group: item_group %>
 <% end %>
