--- a/app/views/product_items/create.js.erb
+++ b/app/views/product_items/create.js.erb
@@ -1,2 +1,3 @@
 $("#product_item-new").html("<%= j render 'product_items/new' %>");
-//$("#show-card").html("<%= j render 'product_items/show', element: @product_items %>");
+$("#show-card").html("<%= j render 'product_items/show', product_item: @product_item %>");
+$("#tab-index").append("<%= j render 'product_items/tab', product_item: @product_item %>");
