--- a/app/views/product_items/_target.html.erb
+++ b/app/views/product_items/_target.html.erb
@@ -1,10 +1,21 @@
 <div class="card border m-1 border-dark" id="<%= dom_ref(target, :show) %>">
   <div class="card-header" id="<%= dom_ref(target, :header) %>">
-    <%= name_method(target) %>
-    <%= item_group.sort %>
-    <%= button_to item_group_path(item_group), method: :delete, remote: true, data: {confirm: "Are you sure?"}, class: "btn btn-sm bg-transparent font-weight-light text-danger pl-0" do %>
-      <span><%= (fa_icon "minus-square") %></span>
-    <% end %>
+    <div class="row align-items-center justify-content-between bg-light">
+      <div class="col-auto px-0 mr-0">
+        <%= render "item_groups/sorter", origin: origin, item_group: item_group %>
+      </div>
+      <div class="col-9 px-0 mx-0">
+        <%= name_method(target) %>
+      </div>
+      <div class="col-1 pl-0 ml-0">
+        <%= item_group.sort %>
+      </div>
+      <div class="col-1 pl-0 ml-0">
+        <%= button_to item_group_path(item_group), method: :delete, remote: true, data: {confirm: "Are you sure?"}, class: "btn btn-sm bg-transparent font-weight-light text-danger pl-0" do %>
+          <span><%= (fa_icon "minus-square") %></span>
+        <% end %>
+      </div>
+    </div>
   </div>
 
   <div class="card-body p-1" id="<%= dom_ref(target, :body) %>">
