--- a/app/views/product_items/_field_toggle.html.erb
+++ b/app/views/product_items/_field_toggle.html.erb
@@ -4,6 +4,7 @@
   </button>
   <div class="dropdown-menu">
     <% product_item.to_class.assoc_names.each do |assoc| %>
+      <div class="dropdown-divider"></div>
       <a class="dropdown-item field-toggle" role="button" href='#<%= dom_ref(product_item, assoc.to_sym, :add) %>'><%= "add #{item_hsh(assoc)[:label]}" %></a>
       <a class="dropdown-item field-toggle" role="button" href='#<%= dom_ref(product_item, assoc.to_sym, :new) %>'><%= "new #{item_hsh(assoc)[:label]}" %></a>
     <% end %>
