--- a/app/views/product_items/_edit.html.erb
+++ b/app/views/product_items/_edit.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: product_item, url: url, scope: form_scope(product_item), id: dom_ref(product_item, :edit) do |f| %>
   <div class="form-row align-items-center">
-    <div class="col-4">
+    <div class="col-5">
       <div class="input-group input-group-sm mb-3">
         <div class="input-group-prepend">
           <span class="input-group-text">type:</span>
@@ -16,16 +16,12 @@
         </div>
         <%= f.text_field :item_name, placeholder: "name", class: "form-control" %>
         <div class="input-group-append">
-          <%= render "product_items/field_toggle", product_item: product_item %>
+          <button class="btn btn-sm btn-outline-primary" type="submit">edit</button>
         </div>
       </div>
     </div>
-
-    <div class="col-1">
-      <button class="btn btn-sm btn-outline-primary mb-3" type="submit">edit</button>
-    </div>
-
   </div>
+
   <div class="form-row toggle-field-group" id="<%= dom_ref(product_item, :form, :fields) %>">
     <%= render "product_items/fields_for", product_item: product_item, f: f %>
   </div>
