--- a/app/views/product_items/_field_toggle.html.erb
+++ b/app/views/product_items/_field_toggle.html.erb
@@ -1,8 +1,7 @@
 <div class="dropdown">
-  <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-
-  </button>
+  <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
   <div class="dropdown-menu">
+    <a class="dropdown-item" role="button" href='<%= delete_url %>' data-remote="true" data-confirm="Are you sure?">delete</a>
     <% product_item.to_class.assoc_names.each do |assoc| %>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item field-toggle" role="button" href='#<%= dom_ref(product_item, assoc.to_sym, :add) %>'><%= "add #{item_hsh(assoc)[:label]}" %></a>
