--- a/app/views/product_items/_target.html.erb
+++ b/app/views/product_items/_target.html.erb
@@ -1,26 +1,18 @@
-<div class="card border m-1 border-dark" id="<%= dom_ref(target, :show) %>">
-  <div class="card-header" id="<%= dom_ref(target, :header) %>">
+<div class="card border border-dark mb-1" id="<%= dom_ref(target, :show) %>">
+  <div class="card-header py-0" id="<%= dom_ref(target, :header) %>">
+    <div class="row align-items-center bg-light">
 
-    <div class="row align-items-center justify-content-between bg-light">
-      <div class="col-auto px-0 mr-0">
+      <div class="col-auto mr-0 mx-0 pr-0">
         <%= render "item_groups/sorter", item_group: item_group %>
       </div>
 
-      <div class="col-9 px-0 mx-0">
-        <%#= name_method(target) %>
-        <%= render 'product_items/edit', product_item: target, url: product_item_path(target) %>
+      <div class="col-10 mt-3">
+        <%= render 'product_items/edit', product_item: target, url: product_item_path(target)%>
       </div>
 
-      <div class="col-1 pl-0 ml-0">
-        <span class="badge badge-primary fs-xs"><%= item_group.sort %></span>
+      <div class="col-1">
+        <%= render "product_items/field_toggle", product_item: target, delete_url: item_group_path(item_group) %>
       </div>
-
-      <div class="col-1 pl-0 ml-0">
-        <%= button_to item_group_path(item_group), method: :delete, remote: true, data: {confirm: "Are you sure?"}, class: "btn btn-sm bg-transparent font-weight-light text-danger pl-0" do %>
-          <span><%= (fa_icon "minus-square") %></span>
-        <% end %>
-      </div>
-
     </div>
   </div>
 
