first working draft of build_type_group for auto poping lib/module product_menu components; add wrinkle to handle digging into option sets composed of subclasses rather than strings

--- a/app/views/product_items/_show.html.erb
+++ b/app/views/product_items/_show.html.erb
@@ -7,7 +7,7 @@
       </div>
 
       <div class="col-1">
-        <%= render "product_items/field_toggle", product_item: product_item, delete_url: product_item_path(product_item) %>
+        <%= render "product_items/field_toggle", product_item: product_item, delete_url: product_item_path(product_item, method: "delete") %>
       </div>
 
     </div>
