--- a/app/views/product_items/_target.html.erb
+++ b/app/views/product_items/_target.html.erb
@@ -6,7 +6,11 @@
         <%= render "item_groups/sorter", item_group: item_group %>
       </div>
 
-      <div class="col-10 mt-3">
+      <div class="col-auto mr-0 mx-0 pr-0">
+        <button class="caret-toggle btn btn-lg bg-transparent ml-1 my-1 pl-2 py-0" data-toggle="collapse" data-target="#<%= dom_ref(target, :body) %>" type="button"><%= (fa_icon "caret-right") %></button>
+      </div>
+
+      <div class="col-9 mt-3">
         <%= render 'product_items/edit', product_item: target, url: product_item_path(target)%>
       </div>
 
@@ -16,7 +20,7 @@
     </div>
   </div>
 
-  <div class="card-body p-1" id="<%= dom_ref(target, :body) %>">
+  <div class="card-body p-1 collapse" id="<%= dom_ref(target, :body) %>">
     <div id='<%= dom_ref(target, :index) %>'>
       <%= render "product_items/index", origin: target %>
     </div>
