I can't remember the extent of the last edits but I think I want to come at this from the top-down by creating a product model with subclasses and see if I can reduce the number of intermediary objects, e.g., instead of product_item::canvas -> field_item::select_field, canvas-select_field, and then constrain relationships using :tags

--- a/app/views/field_items/_target.html.erb
+++ b/app/views/field_items/_target.html.erb
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div class="card-body p-1" id="<%= dom_ref(target, :body) %>">
+  <div class="card-body p-1 collapse" id="<%= dom_ref(target, :body) %>">
     <div id='<%= dom_ref(target, :index) %>'>
       <%= render "product_items/index", origin: target %>
     </div>
