--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <body>
     <div class="container">
       <nav class="fixed-top navbar navbar-expand" id="nav-bar">
+        <a href="<%= products_path %>" class="nav-link text-white">
+          Products
+        </a>
         <a href="<%= product_items_path %>" class="nav-link text-white">
           Product-Items
         </a>
