--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
         <a href="<%= products_path %>" class="nav-link text-white">
           Products
         </a>
+        <a href="<%= field_items_path %>" class="nav-link text-white">
+          Field-Items
+        </a>
         <a href="<%= product_items_path %>" class="nav-link text-white">
           Product-Items
         </a>
