refactored search controller methods to handle search contexts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,12 @@
         </a>
         <a href="<%= field_items_path %>" class="nav-link text-white">
           Field-Items
-        </a>
+        </a> 
         <a href="<%= product_items_path %>" class="nav-link text-white">
           Product-Items
+        </a>
+        <a href="<%= product_search_index_path %>" class="nav-link text-white">
+          Product Search
         </a>
       </nav>
       <%= yield %>
