--- a/app/views/product_search/_form.html.erb
+++ b/app/views/product_search/_form.html.erb
@@ -1,5 +1,11 @@
-<%= form_with url: '/product_search', method: :get, id: "search-form" do |f| %>
-  <div class="form-inline">
-    <%#= f.select :type, FieldSet.media_tags, {prompt: "- select type -"}, {class: "form-control form-control-sm mr-sm-2"} %>
+<%= form_with url: product_search_index_url, method: :get, id: 'search-form' do |f| %>
+<%#= form_with url: '/product_search', method: :get, id: 'search-form' do |f| %>
+  <div class="form">
+    <div id="hidden_tags">
+      <%= render "product_search/hidden_tags", hidden_inputs: @search_inputs[:hidden]  %>
+    </div>
+    <% @search_inputs[:inputs].each do |tag_group| %>
+      <%= render "product_search/input_field", opt_name: tag_group[0][:opt_name], tag_group: tag_group %>
+    <% end %>
   </div>
 <% end %>
