--- a/app/views/product_search/index.html.erb
+++ b/app/views/product_search/index.html.erb
@@ -1,5 +1,6 @@
 <div class="row justify-content-center">
-  <h1 id="">
+  <h1>
+    Product Search
   </h1>
 </div>
 
@@ -7,7 +8,7 @@
   <div class="col-5">
     <div class="card border border-secondary p-1">
       <div class="card-header p-1">
-        <%= render "product_search/new" %>
+        <%= render "product_search/form", search_set: @search_set, search_inputs: @search_inputs %>
       </div>
       <div class="card-body p-1">
         <%#= render 'product_items/aside', product_items: @product_items %>
