--- a/app/views/product_search/_hidden_tags.html.erb
+++ b/app/views/product_search/_hidden_tags.html.erb
@@ -1,3 +1,3 @@
 <% @search_inputs[:hidden].each do |input_hsh| %>
-  <%= hidden_field_tag "hidden[#{input_hsh[:field_name]}]", input_hsh[:field_value] %>
+  <%= hidden_field_tag "hidden[#{input_hsh[:input_name]}]", input_hsh[:input_value] %>
 <% end %>
