--- a/app/views/product_search/index.js.erb
+++ b/app/views/product_search/index.js.erb
@@ -1,6 +1,7 @@
 var form = $("#search-form");
-var selected_opts = <%= raw @selected %>
+var selected_opts = <%= raw @search_inputs[:selected] %>
 $(form).html("<%=  j render 'product_search/form', search_set: @search_set, search_inputs: @search_inputs %>");
 $(selected_opts).each(function(i, opt_set){
-  $(opt_set[0]).find('option').eq(opt_set[1]).attr('selected', true);
+  //$(opt_set[0]).find('option').eq(opt_set[1]).attr('selected', true);
+  $(opt_set[0]).find('option[value="'+opt_set[1]+'"]').attr('selected', true); 
 });
