--- a/app/views/product_search/index.html.erb
+++ b/app/views/product_search/index.html.erb
@@ -8,7 +8,7 @@
   <div class="col-5">
     <div class="card border border-secondary p-1">
       <div class="card-header p-1">
-        <%= render "product_search/form", search_set: @search_set, search_inputs: @search_inputs %>
+        <%= render "product_search/form", search_set: @search_set, input_group: @input_group %>
       </div>
       <div class="card-body p-1">
         <%#= render 'product_items/aside', product_items: @product_items %>
