--- a/app/views/product_search/_form.html.erb
+++ b/app/views/product_search/_form.html.erb
@@ -1,10 +1,11 @@
 <%= form_with url: product_search_index_url, method: :get, id: 'search-form' do |f| %>
   <div class="form">
     <div id="hidden_tags">
-      <%= render "product_search/hidden_tags", hidden_inputs: @search_inputs[:hidden]  %>
+      <%= render "product_search/hidden_tags", hidden_inputs: @input_group[:hidden]  %>
     </div>
-    <% @search_inputs[:inputs].each do |tag_group| %>
-      <%= render "product_search/input_field", opt_name: tag_group[0][:opt_name], tag_group: tag_group %>
+    <% @input_group[:inputs].each do |opt_group| %>
+      <%#= render "product_search/input_field", opt_name: input_hsh[0][:opt_name], input_hsh: input_hsh %>
+      <%= render "product_search/input_field", field_name: opt_group[0][:opt_name], opt_set: opt_group %>
     <% end %>
   </div>
 <% end %>
