fixed name building method for select opts

--- a/app/views/field_items/index.html.erb
+++ b/app/views/field_items/index.html.erb
@@ -9,7 +9,7 @@
       <div class="card-header p-1">
         <%= render "field_items/new" %>
       </div>
-      <div class="card-body p-1">
+      <div class="card-body p-1" id="tab-pane">
         <%= render 'field_items/aside', field_items: @field_items %>
       </div>
     </div>
