refactored edit#artist form to handle hstore tag values via fields_for and OpenStruct

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,15 @@
   <body>
     <div class="container">
       <nav class="fixed-top navbar navbar-expand" id="nav-bar">
+        <a href="<%= artists_path %>" class="nav-link text-white">
+          Artists
+        </a>
         <a href="<%= products_path %>" class="nav-link text-white">
           Products
         </a>
         <a href="<%= field_items_path %>" class="nav-link text-white">
           Field-Items
-        </a> 
+        </a>
         <a href="<%= product_items_path %>" class="nav-link text-white">
           Product-Items
         </a>
