added js fn  to clear #show card on blank selection and toggleer that sets correct form-toggle btn to active

--- a/app/views/artists/_btn_toggle.html.erb
+++ b/app/views/artists/_btn_toggle.html.erb
@@ -1,4 +1,4 @@
-<div class="btn-group" role="group">
+<div class="btn-group toggle-parent" role="group">
   <button type="button" class="btn btn-sm btn-light form-control-sm form-toggle" data-target="#search"><%= (fa_icon "search") %></button>
-  <button type="button" class="btn btn-sm btn-light form-control-sm form-toggle" data-target="#new"><%= (fa_icon "plus") %></button>
+  <button type="button" class="btn btn-sm btn-light form-control-sm form-toggle active" data-target="#new"><%= (fa_icon "plus") %></button>
 </div>
