--- a/app/views/artists/_new.html.erb
+++ b/app/views/artists/_new.html.erb
@@ -3,7 +3,7 @@
     <div class="input-group input-group-sm">
       <%= f.text_field :artist_name, placeholder: "artist name", class: "form-control form-control-sm" %>
       <div class="input-group-append mr-2">
-        <button class="btn btn-sm btn-outline-primary" type="submit"><%= (fa_icon "plus") %></button>
+        <button class="btn btn-sm btn-outline-primary" type="submit">submit</button>
       </div>
     </div>
   </div>
