added resources: item, invoice, supplier

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <body>
     <div class="container">
       <nav class="fixed-top navbar navbar-expand" id="nav-bar">
+        <a href="<%= suppliers_path %>" class="nav-link text-white">
+          Suppliers
+        </a>
         <a href="<%= artists_path %>" class="nav-link text-white">
           Artists
         </a>
