added item views and ref to invoice

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -2,4 +2,4 @@
 <%#= link_to 'Back', url_for(:back) %>
 
 <%= render 'invoices/nav_bar', invoice: @invoice %>
-<%#= render 'items/table', invoice: @invoice %>
+<%= render 'items/table', invoice: @invoice %>
