--- a/app/views/invoices/_nav_bar.html.erb
+++ b/app/views/invoices/_nav_bar.html.erb
@@ -30,7 +30,7 @@
   </div>
 
   <div class="collapse" id="<%= dom_tag(invoice, :new_sku) %>" data-parent="#invoice-show">
-    <%#= render 'items/new', invoice: invoice %>
+    <%= render 'items/new', invoice: invoice %>
   </div>
 
   <div class="collapse" id="<%= dom_tag(invoice, :new_skus) %>" data-parent="#invoice-show">
