--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,7 +1,8 @@
-<div class="form-inline" id="edit-item">
-  <%= form_with model: item, url: invoice_item_path(invoice, item) do |f| %>
+<%= form_with model: item, url: invoice_item_path(invoice, item), id: "edit-item" do |f| %>
+  <div class="form">
+    <%= hidden_field_tag "hidden[product_id]", item.product_id %>
     <%= f.number_field :sku, placeholder: "sku", class: "form-control form-control-sm mr-sm-2" %>
     <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">edit</button>
     <%= link_to "delete", [invoice, item], method: :delete, class: 'btn btn-sm btn-outline-danger form-control-sm', data: { confirm: 'Are you sure?' } %>
-  <% end %>
-</div>
+  </div>
+<% end %>
