--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,27 +1,22 @@
 <div class="row justify-content-center">
-  <h1 id="sku" data-medium-category="<%= html_tag(i: @item.medium_category, tag: 'fk', delim: '_') %>">
+  <h1 id="sku">
     Sku: <span id="sku-header"><%= @item.sku %></span><span id="item-product"></span>
   </h1>
 </div>
 
-<div class="collapse">
-  <%#= render "product_categories/form", dropdown_item: @item.product_category %>
-</div>
-
-
 <div class="row justify-content-center">
-  <h4><span><%= @item.invoice.supplier.name %></span> inv: <span><%= @item.invoice.invoice_number %></span></h4>
+  <h4><span><%= @item.invoice.supplier.supplier_name %></span> inv: <span><%= @item.invoice.invoice_number %></span></h4>
 </div>
 <hr>
 
 <div class="row justify-content-center">
   <div class="col-5">
-    <div class="col" id="">
-      <%#= render "product_categories/dropdown" %>
-    </div>
-
-    <div class="col" id="">
-      <div id="product-category-index">
+    <div class="card border border-secondary mb-2">
+      <div class="card-header">
+        <%= render "items/search", search_set: @search_set, input_group: @input_group %>
+      </div>
+      <div class="card-body" id="tab-pane">
+        <%= render 'items/aside', field_items: @search_set %>
       </div>
     </div>
   </div>
@@ -31,8 +26,6 @@
 
     <div id="show-card">
       <%= render "items/edit", invoice: @item.invoice, item: @item %>
-      <%#= render "item_products/form", item: @item %>
-      <%#= render "item_elements/form", item: @item %>
     </div>
   </div>
 </div>
