refactored helper methods that build product related field_items rendered on items#edit

--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -5,5 +5,12 @@
     <%= f.number_field :sku, placeholder: "sku", class: "form-control form-control-sm mr-sm-2" %>
     <button class="btn btn-sm btn-outline-primary form-control-sm" type="submit">edit</button>
     <%= link_to "delete", [invoice, item], method: :delete, class: 'btn btn-sm btn-outline-danger form-control-sm', data: { confirm: 'Are you sure?' } %>
+    <% if product %>
+      <% product_fields(product).each do |f_hsh| %>
+        <div class="row">
+          <%= render "items/fields/#{f_hsh[:render_as]}", f: f, f_hsh: f_hsh %>
+        </div>
+      <% end %>
+    <% end %>
   </div>
 <% end %>
