--- a/app/views/items/fields/_number_field.html.erb
+++ b/app/views/items/fields/_number_field.html.erb
@@ -1,6 +1,6 @@
 <div class="col-2">
   <div class="input-group input-group-sm mb-3">
-    <%= f.fields_for :product do |ff| %>
+    <%= f.fields_for :tags do |ff| %>
       <%= ff.number_field f_hsh[:method], placeholder: f_hsh[:label], class: "form-control" %>
     <% end %>
   </div>
