--- a/app/views/items/fields/_text_field.html.erb
+++ b/app/views/items/fields/_text_field.html.erb
@@ -2,7 +2,7 @@
   <div class="input-group-prepend">
     <span class="input-group-text"><%= f_hsh[:label] %></span>
   </div>
-  <%= f.fields_for :product do |ff| %>
+  <%= f.fields_for :tags do |ff| %>
     <%= ff.text_field f_hsh[:method], placeholder: f_hsh[:label], class: "form-control" %>
   <% end %>
 </div>
