--- a/app/views/items/_search.html.erb
+++ b/app/views/items/_search.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: search_items_url, method: :get, id: 'search-form' do |f| %>
-  <div class="form" data-selected="<%#= @input_group[:selected] %>">
+  <div class="form">
     <div id="hidden_tags">
       <% @input_group[:hidden].each do |input_hsh| %>
         <%= hidden_field_tag "hidden[search][#{input_hsh[:input_name]}]", input_hsh[:input_value] %>
