--- a/app/views/items/_search.html.erb
+++ b/app/views/items/_search.html.erb
@@ -1,10 +1,22 @@
 <%= form_with url: search_items_url, method: :get, id: 'search-form' do |f| %>
   <div class="form">
+
     <div id="hidden_tags">
+      <%= hidden_field_tag "hidden[search][item_id]", @item.try(:id) %>
+      <%= hidden_field_tag "hidden[search][product_id]", @product.try(:id) %>
+      <%= hidden_field_tag "hidden[search][type]", product_type(@product) %>
+      <%= hidden_field_tag "hidden[previous][type]", product_type(@product) %>
+      <%#= hidden_field_tag "hidden[previous][tags]", product_tags(@product) %>
+
       <% @input_group[:hidden].each do |input_hsh| %>
         <%= hidden_field_tag "hidden[search][#{input_hsh[:input_name]}]", input_hsh[:input_value] %>
       <% end %>
     </div>
+
+    <% radio_option_group("items[search][type]").each do |opt_hsh| %>
+      <%= render "items/fields/radio_button", opt_hsh: opt_hsh %>
+    <% end %>
+
     <% @input_group[:inputs].each do |opt_group| %>
       <%= render "items/input_field", field_name: opt_group[0][:opt_name], opt_set: opt_group %>
     <% end %>
