--- a/app/views/items/search.js.erb
+++ b/app/views/items/search.js.erb
@@ -1,8 +1,16 @@
+var type = "<%= @input_group[:type] %>"
 var form = $("#search-form");
+var tab_id = $("#product-index").find("button.active").attr("id");
 var selected_opts = <%= raw @input_group[:selected] %>
-$(form).html("<%= j render 'items/search', search_set: @search_set, input_group: @input_group %>");
-$("#tab-pane").html("<%= j render 'items/aside', field_items: @search_set %>");
+$(form).html("<%= j render 'items/search', item: @item, products: @products, input_group: @input_group %>");
+
+$("input[name='items[search][type]'][value='"+type+"']").prop('checked', true);
 
 $(selected_opts).each(function(i, opt_set){
   $(opt_set[0]).find('option[value="'+opt_set[1]+'"]').attr('selected', true);
 });
+
+$("#tab-pane").html("<%= j render 'items/aside', field_items: @products %>");
+if (tab_id != undefined){
+  $('#'+tab_id).addClass("active");
+}
