--- a/app/views/items/update.js.erb
+++ b/app/views/items/update.js.erb
@@ -1,5 +1,5 @@
 $("#edit-item").html("<%= j render 'items/edit', invoice: @invoice, item: @item, product: @product, artist: @artist %>");
-$("#search-form").html("<%= j render 'items/search', search_set: @search_set, input_group: @input_group %>");
+$("#search-form").html("<%= j render 'items/search', products: @products, input_group: @input_group %>");
 var tab_id = $("#product-index").find("button.active").attr("id");
 var selected_opts = <%= raw @input_group[:selected] %>
 
@@ -7,7 +7,7 @@ $(selected_opts).each(function(i, opt_set){
   $(opt_set[0]).find('option[value="'+opt_set[1]+'"]').attr('selected', true);
 });
 
-$("#tab-pane").html("<%= j render 'items/aside', field_items: @search_set %>");
+$("#tab-pane").html("<%= j render 'items/aside', field_items: @products %>");
 if (tab_id != undefined){
   $('#'+tab_id).addClass("active");
 }
