refactored views and js and controller re search

--- a/app/views/items/fields/_radio_button.html.erb
+++ b/app/views/items/fields/_radio_button.html.erb
@@ -1,4 +1,5 @@
 <div class="form-check form-check-inline">
-  <%= radio_button_tag opt_hsh[:name], opt_hsh[:value], false, {class: "form-check-input search-select"} %>
+  <%#= radio_button_tag opt_hsh[:name], opt_hsh[:value], false, {class: "form-check-input search-select"} %>
+  <%= radio_button_tag "items[search][type]", opt_hsh[:value], opt_hsh[:checked], {class: "form-check-input search-select"} %>
   <label class="form-check-label" for="<%= opt_hsh[:name] %>"><%= opt_hsh[:label] %></label>
 </div>
