--- a/app/views/items/_aside.html.erb
+++ b/app/views/items/_aside.html.erb
@@ -1,6 +1,6 @@
 <div class="list-group" id="product-index" role="tablist">
   <% field_items.each do |field_item| %>
-    <button type="button" class="list-group-item list-group-item-action py-1" id="<%= field_item.id %>" data-toggle="list">
+    <button type="button" class="list-group-item list-group-item-action py-1 <%= active_btn(field_item.id, product.try(:id)) %>" id="<%= field_item.id %>" data-toggle="list">
       <span class="text-sm font-weight-light item-name"><%= field_item.product_name %></span>
     </button>
   <% end %>
